--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -1097,7 +1097,7 @@
 .dividerRed-MKoLlr .dividerContent-2L12VI:before,
 .dividerContent-2L12VI:after, 
 .dividerContent-2L12VI:before {
-	background-color: transparent;
+	border: none;
 }
 
 .divider-3gKybi {
@@ -1575,7 +1575,8 @@
 }
 
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-Ia2hRJ {
+.theme-dark .jumpButton-Ia2hRJ,
+.theme-dark .collapseButton-oSNpPX {
 	background-color: rgba(0, 0, 0, 0.56);
 	color: white !important;
 	border-radius: 20px;
