--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -198,9 +198,14 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background: rgba(0, 0, 0, 0.427);
 }
 
+.backdrop-1wrmKB,
+.backdropWithLayer-3_uhz4 {
+  background-color: rgba(0,0,0,0.33) !important;
+}
 
-.backdrop-1wrmKB {
-   background-color: rgba(0, 0, 0, 0.33) !important;
+.theme-dark .root-1gCeng {
+    background-color: rgba(0, 0, 0, 0.55);
+    box-shadow: none;
 }
 
 .theme-dark .header-3ZP1MY {
@@ -617,9 +622,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: #728e3d;
 }
 
-.divider-3FBTu8,
-.dividerRed-MKoLlr .dividerContent-2L12VI:after, 
-.dividerRed-MKoLlr .dividerContent-2L12VI:before {
+.divider-3FBTu8 {
     background: transparent;
 }
 
@@ -787,8 +790,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 .dividerContent-2L12VI:after, 
-.dividerContent-2L12VI:before {
-    background-color: transparent;
+.dividerContent-2L12VI:before,
+.dividerRed-MKoLlr .dividerContent-2L12VI:after, 
+.dividerRed-MKoLlr .dividerContent-2L12VI:before {
+    border: none;
 }
 
 .uploadArea-3QgLtW {
@@ -1317,7 +1322,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 .theme-dark .jumpButton-Ia2hRJ,
-.theme-dark .jumpButton-3DTcS_ {
+.theme-dark .jumpButton-3DTcS_,
+.theme-dark .collapseButton-oSNpPX {
     background-color: #1a1919;
     color: #728e3d !important;
 }
