--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -489,9 +489,15 @@
   box-shadow: none;
 }
 
-.backdrop-1wrmKB {
+.backdrop-1wrmKB,
+.backdropWithLayer-3_uhz4 {
   background-color: rgba(0,0,0,0.2) !important;
   opacity: 0.3 !important;
+}
+
+.theme-dark .root-1gCeng {
+    background-color: rgba(0, 0, 0, 0.55);
+    box-shadow: none;
 }
 
 .theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected {
@@ -605,7 +611,7 @@
 
 .dividerContent-2L12VI:after, 
 .dividerContent-2L12VI:before {
-  background-color: transparent !important;
+  border: none !important;
 }
 .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI {
   color: silver;
@@ -1043,7 +1049,7 @@
 /* DON'T TOUCH */
 .dividerContent-2L12VI:after, 
 .dividerContent-2L12VI:before {
-  background-color: transparent !important;
+  border: none !important;
 }
 /* DON'T TOUCH  */
 .mask-1l8v16 {
@@ -1398,7 +1404,8 @@
   background: none;
 }
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-Ia2hRJ {
+.theme-dark .jumpButton-Ia2hRJ,
+.theme-dark .collapseButton-oSNpPX {
   background-color: #129b1a; 
   color: white;
 }
