--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -522,9 +522,15 @@
     background-color: rgba(35, 35, 35, 0.44);
 }
 
-.backdrop-1wrmKB {
-    background-color: rgba(0, 0, 0, 0.49) !important;
-    opacity: 1 !important;
+.backdrop-1wrmKB,
+.backdropWithLayer-3_uhz4 {
+  background-color: rgba(0,0,0,0.49) !important;
+  opacity: 1 !important;
+}
+
+.theme-dark .root-1gCeng {
+    background-color: rgba(0, 0, 0, 0.55);
+    box-shadow: none;
 }
 
 .uploadArea-3QgLtW {
@@ -1452,7 +1458,8 @@
 }
 
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-Ia2hRJ {
+.theme-dark .jumpButton-Ia2hRJ,
+.theme-dark .collapseButton-oSNpPX {
     background-color: #f4acc5;
     color: white !important;
 }
@@ -1665,7 +1672,7 @@
 .dividerRed-MKoLlr .dividerContent-2L12VI:before,
 .dividerContent-2L12VI:after, 
 .dividerContent-2L12VI:before {
-    background-color: transparent;
+    border: none;
 }
 
 .divider-3gKybi {
