--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -2317,6 +2317,10 @@
     background-color: transparent;
   }
 
+  .embedFull-2tM8-- {
+    border-left: none;
+    background: rgba(0,0,0,0.3);
+  }
 
 
 .color-primary-0 { background-color: #582060 rgb(88, 32, 96) }	/* Main Primary Color */
