--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -829,18 +829,16 @@
     box-shadow: none;
 }
 
-.activityFeed-1C0EmJ,
-.theme-dark .gameLibrary-TTDw4Y,
+
 .scroller-1IIF0A,
 .theme-dark .root-1BQpZw,
 .scroller-5bBood,
-.theme-dark .applicationStore-1pNvnv,
-.scroller-9moviB,
-.theme-dark .container-3gCOGc {
+.theme-dark .container-1D34oG {
     background-color: rgba(0, 0, 0, 0.195);
 }
 
-.friendsTable-133bsv .friendsTableBody-1ZhKif {
+.theme-dark .peopleList-3c4jOR,
+.applicationStore-1pNvnv {
     background-color: transparent;
 }
 
@@ -849,63 +847,19 @@
     color: white;
 }
 
-.outer-2IVh5n,
-.theme-dark .recentlyPlayedContainer-2F3MqS {
-    background-color: rgba(0, 0, 0, 0.42);
-}
 
-.inset-GQDQYw, 
-.outer-2IVh5n {
-    border-radius: 13px;
-}
 
 .icon-22AiRD {
     color: white;
 }
 
-.theme-dark .popoutContainer-3WC9HR:hover {
-    background-color: rgba(0, 0, 0, 0.72);
-}
 
-.theme-dark .separator-2c4hi3,
+
 .divider-3FBTu8 {
     background-color: transparent;
 }
 
-.theme-dark .popout-3G62UL {
-    background-color: #181818;
-    box-shadow: none;
-}
-  
-.theme-dark .enabled-5QKLzu:hover {
-    background-color: rgba(244, 172, 197, 0.87);
-}
 
-.theme-dark .memberListItem-2ZX2pl:not(.popoutDisabled-xucru2):hover {
-    background-color: rgba(244, 172, 197, 0.47);
-}
-
-.colorStandard-2KCXvj {
-    color: white;
-}
-
-.theme-dark .inset-GQDQYw {
-    background-color: rgba(244, 172, 197, 0.47);
-}
-
-.theme-dark .partyMemberOverflow-1tfvpb {
-    color: white;
-    background-color: #f4acc5;
-    text-shadow: 0 0 3px black,0 0 3px black,0 0 3px black;
-}
-
-.theme-dark .wrapper-9ppXpy {
-    box-shadow: none;
-}
-
-.colorMuted-HdFt4q {
-    color: white;
-}
 
 .side-8zPYf6 .themed-OHr7kt.item-PXvHYJ:hover, .topPill-30KHOu .themed-OHr7kt.item-PXvHYJ:hover {
     background-color: rgba(244, 172, 197, 0.399);
@@ -928,9 +882,6 @@
     background-color: rgba(0, 0, 0, 0.23);
 }
 
-.friendsTable-133bsv .friendsTableHeader-32yE7d {
-    border-bottom: none;
-}
 
 
 
@@ -940,33 +891,6 @@
     border: none;
 }
 
-.itemBackground-2vEldQ:before {
-    background: rgba(0, 0, 0, 0.73);
-}
-
-.theme-dark .overlappingBorder-3aFng4 {
-    border-color:#f4acc5;
-}
-
-.theme-dark .categoryHeader-1D7Tqy, 
-.theme-dark .premiumApplicationsHeader-Zmkm5e {
-    border: none;
-}
-
-.gradientOverlayLeft-3w159C,
-.gradientOverlayRight-3vMuS8 {
-    background-image: none;
-}
-
-.scrollerButton-1Vm5_P {
-    background-color: black;
-    color: white;
-}
-
-.theme-dark .genreTag-3QLRUJ {
-    background: black;
-    color: #d2dae8;
-}
 
 .theme-dark .message-2qRu38 {
     background-color: rgba(0, 0, 0, 0.29);
@@ -978,10 +902,6 @@
     color: white !important;
 }
 
-.theme-dark .friendsTable-133bsv .friendTableAddWrapper-nHHZtK .friendTableAddHeader-m9bzFr {
-    border-bottom: none;
-    background-color: rgba(0, 0, 0, 0.25);
-}
 
 .numberBadge-2s8kKX {
     background-color: #f4acc5 !important;
@@ -999,7 +919,8 @@
     color: white;
 }
 
-.theme-dark .friend-3KALPe {
+.theme-dark .friend-3KALPe,
+.title-30qZAO {
     color: white;
 }
 
@@ -1007,23 +928,25 @@
     border-radius: 12px;
 }
 
-.friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumn-eVHFqJ,
-.friendsTable-133bsv .friendsRow-2yicud+.friendsRow-2yicud {
+
+.peopleListItem-2nzedh {
     border: none;
 }
 
-.friendsTable-133bsv .friendsRow-2yicud:hover {
+.peopleListItem-2nzedh:hover {
     background: rgba(0, 0, 0, 0.23);
     border-radius: 14px;
 }
 
-.friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9:hover,
-.friendsTable-133bsv .friendsRow-2yicud .friendsColumnGuilds-2we6jb .moreMutualGuildsBtn-2VwbkO:hover {
+.actionButton-uPB8Fs:hover {
     background-color: rgba(244, 172, 197, 0.8);
 }
 
-.friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9,
-.friendsTable-133bsv .friendsRow-2yicud .friendsColumnGuilds-2we6jb .moreMutualGuildsBtn-2VwbkO {
+.nowPlayingColumn-2sl4cE {
+    background: transparent;
+}
+
+.actionButton-uPB8Fs {
     background-color: rgba(244, 172, 197, 0.5);
     color: white !important;
 }
