--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -47,7 +47,8 @@
 	opacity: 0.8;
 }
 
-.scroller-zPkAnE {
+.scroller-zPkAnE,
+.scroller-2XE8rp {
 	background-color: transparent;
 }
 
@@ -185,15 +186,12 @@
 	box-shadow: inset 0 0 26px 5px rgba(0, 0, 0, 0.66);
 }
 
-.theme-dark .activityFeed-1C0EmJ,
-.theme-dark .gameLibrary-TTDw4Y,
+
 .scroller-1IIF0A,
-.theme-dark .root-1BQpZw,
-.scroller-5bBood,
-.theme-dark .applicationStore-1pNvnv,
-.scroller-9moviB,
-.theme-dark .container-3gCOGc,
-.friendsTable-133bsv .friendsTableBody-1ZhKif {
+.theme-dark .container-1D34oG,
+.theme-dark .peopleList-3c4jOR,
+.applicationStore-1pNvnv,
+.scroller-9moviB {
 	background-color: transparent;
 }
 
@@ -211,75 +209,6 @@
 	color: white;
 }
 
-.theme-dark .outer-2IVh5n {
-	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg);
-	background-size: cover;
-	border: 2px solid rgba(0, 0, 0, 0.66);
-	box-shadow: inset 0 0 26px 5px rgba(0, 0, 0, 0.66);
-	border-radius: 45px;
-}
-
-.image-3g0L65 {
-	border-radius: 41px 41px 0 0;
-}
-
-.theme-dark .recentlyPlayedContainer-2F3MqS {
-	background-color: transparent;
-	border-radius: 41px;
-}
-
-.theme-dark .inset-GQDQYw,
-.theme-dark .separator-2c4hi3 {
-	background-color: transparent;
-}
-
-.theme-dark .popoutContainer-3WC9HR:hover,
-.theme-dark .popout-3G62UL {
-	background-color: rgba(0, 0, 0, 0.36);
-	border-radius: 31px;
-}
-.theme-dark .outer-2IVh5n.interactive-1BeKSi:hover {
-	background-color: rgba(0, 0, 0, 0.36);
-}
-
-.theme-dark .popout-3G62UL {
-	background-color: rgba(0, 0, 0, 0.86);
-	border-radius: 31px;
-}
-
-.theme-dark .colorStandard-2KCXvj {
-	color: white;
-}
-
-.theme-dark .enabled-5QKLzu:hover,
-.theme-dark .memberListItem-2ZX2pl:not(.popoutDisabled-xucru2):hover {
-	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg);
-	background-size: cover;
-	border: 2px solid rgba(0, 0, 0, 0.66);
-	box-shadow: inset 0 0 26px 5px rgba(0, 0, 0, 0.66);
-	border-radius: 45px;
-}
-
-.theme-dark .partyMemberOverflow-1tfvpb {
-	color: white;
-	background: linear-gradient(5deg, transparent 72%, rgba(204, 227, 246, 0.6) 100%);
-	border: 2px solid rgba(204, 227, 246, 0.60);
-	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
-}
-
-.gameSectionIcon-1-By4Y,
-.activitySectionAssets-3-aapk .largeImage-e_Lx8c,
-.headerIcon-2AzihC, 
-.multipleIconWrapper-1PjkRO,
-.iconWrapper-3-slmh,
-.icon-1EDgZt {
-	border-radius: 50px;
-}
-
-.theme-dark .applicationStreamingPreviewWrapper-GnrvWN {
-	border-radius: 30px;
-	background-color: black;
-}
 
 .liveRed-lUmv1v {
 	background-color:rgba(255,255,255,.22) !important;
@@ -287,13 +216,6 @@
 	min-height: unset !important;
 }
 
-.theme-dark .wrapper-9ppXpy {
-	box-shadow: none;
-}
-
-.theme-dark .colorMuted-HdFt4q {
-	color: white;
-}
 
 .theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-track-piece,
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track, 
@@ -377,22 +299,6 @@
 	background-size: cover;
 }
 
-.theme-dark .itemBackground-2vEldQ {
-	background-color: transparent;
-}
-
-.theme-dark .itemBackground-2vEldQ:before {
-	background: radial-gradient(ellipse at top,rgba(54,57,63,0),black),linear-gradient(90deg,black 0,rgba(54,57,63,0) 40%,rgba(54,57,63,0) 60%,black),linear-gradient(0deg,black 0,rgba(54,57,63,0) 25%);
-}
-
-.theme-dark .overlappingBorder-3aFng4 {
-	border-color: rgba(255, 255, 255, 0.62);
-	border-radius: 30px;
-}
-
-.paginationItemContainer-3VCxU- {
-    border-radius: 30px;
-}
 
 .footer-3rDWdC .input-cIJ7To .lookFilled-1Gx00P.colorBrand-3pXr91,
 .copyButton-1I8hd3 {
@@ -407,44 +313,6 @@
 	border-top-right-radius: 0;
 	border-bottom-right-radius: 0;
 	border-bottom-left-radius: 13px;
-}
-
-.theme-dark .categoryHeader-1D7Tqy, 
-.theme-dark .premiumApplicationsHeader-Zmkm5e {
-	border-color: transparent;
-}
-
-.theme-dark .scrollerButton-1Vm5_P {
-	background-color: black;
-	color: white;
-}
-
-.theme-dark .gradientOverlayRight-3vMuS8 {
-	background-image: linear-gradient(90deg,rgba(54,57,63,0),black);
-}
-
-.theme-dark .gradientOverlayLeft-3w159C {
-	background-image: linear-gradient(90deg,black,rgba(54,57,63,0));
-}
-
-.theme-dark .tile-QA_yMc,
-.theme-dark .tileMedia-1q3guD {
-	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg) !important;
-	box-shadow: none !important;
-}
-
-.theme-dark .mediaFade-1SdEfL {
-	background: linear-gradient(180deg,transparent,black 45%,black);
-}
-
-.theme-dark .footerSub-1Jedbi {
-	color: silver;
-}
-
-.theme-dark .genreTag-3QLRUJ {
-	background: rgba(0, 0, 0, 0.50);
-	color: white;
-	border-radius: 45px;
 }
 
 .channel-2QD9_O .linkButtonIcon-Mlm5d6,
@@ -466,10 +334,7 @@
 	opacity: 1 !important;
 }
 
-.theme-dark .friendsTable-133bsv .friendTableAddWrapper-nHHZtK .friendTableAddHeader-m9bzFr {
-	background: rgba(0, 0, 0, 0.3);
-	border-bottom: none;
-}
+
 
 .theme-dark .wrapper-1cBijl {
 	border-color: transparent;
@@ -484,12 +349,6 @@
 }
 
 
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnGuilds-2we6jb .moreMutualGuildsBtn-2VwbkO {
-	color: white;
-	background: linear-gradient(5deg, transparent 72%, rgba(204, 227, 246, 0.6) 100%) !important;
-	border: 2px solid rgba(204, 227, 246, 0.60) !important;
-	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
-}
 
 .theme-dark .checked-3_4uQ9 {
 	background: linear-gradient(5deg, transparent 72%, rgba(204, 227, 246, 0.6) 100%) !important;
@@ -540,26 +399,24 @@
 	border-radius: 50px;
 }
 
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9 {
+.theme-dark .actionButton-uPB8Fs {
 	background-color: rgba(204, 227, 246, 0.242) !important;
 	border: 2px solid rgba(204, 227, 246, 0.60) !important;
 	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
 	border-radius: 30px;
 }
 
-.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumn-eVHFqJ,
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnStatus-ZH4ho2,
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnName-1zBOKm {
+.theme-dark .title-30qZAO {
 	color: white;
 }
 
-.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d,
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud+.friendsRow-2yicud,
+
+.theme-dark .peopleListItem-2nzedh,
 .theme-dark .checkbox-1ix_J3 {
 	border: none;
 }
 
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud:hover {
+.theme-dark .peopleListItem-2nzedh:hover {
  background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg);
  background-size: cover;
  border: 2px solid rgba(0, 0, 0, 0.66);
@@ -567,8 +424,8 @@
 
 }
 
-.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumnSeparator-3MqtMA {
-	background-color: transparent;
+.nowPlayingColumn-2sl4cE {
+  background: transparent;
 }
 
 .theme-dark .childWrapper-anI2G9 {
