--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -30,15 +30,11 @@
 .theme-dark .sidebarRegion-VFTUkN,
 .sidebarRegionScroller-3MXcoP,
 .theme-dark .standardSidebarView-3F1I7i,
-.theme-dark .container-3gCOGc,
-.friendsTable-133bsv .friendsTableBody-1ZhKif,
-.theme-dark .applicationStore-1pNvnv,
-.scroller-9moviB,
-.theme-dark .gameLibrary-TTDw4Y,
+.theme-dark .container-1D34oG,
+.theme-dark .peopleList-3c4jOR,
 .scroller-1IIF0A,
-.theme-dark .activityFeed-1C0EmJ,
-.theme-dark .root-1BQpZw,
-.scroller-5bBood,
+.applicationStore-1pNvnv,
+.scroller-9moviB,
 .scroller-305q3I {
   background-color: transparent;
 }
@@ -1593,17 +1589,17 @@
   color: white;
 }
 
-.scroller-zPkAnE {
+.scroller-zPkAnE,
+.scroller-2XE8rp {
   background-color: transparent;
 }
 
 
 
 .quickswitcher-3JagVE {
-  right: 12pc;
-  width: 1070px;
+  width: 570px;
   border-radius: 8px;
-  padding: 120px 120px 0;
+  padding: 20px 20px 0;
   box-shadow: 0 4px 10px rgba(0,0,0,.7), 0 0 0 1px rgba(28,36,43,.6);
 }
 
@@ -1616,11 +1612,6 @@
 }
 .theme-dark .input-2VB9rf {
   background-color: transparent;
-}
-.input-2VB9rf {
-  top: -62px;
-  border-radius: 12px;
-  height: 120px;
 }
 .theme-dark .resultFocused-3aIoYe {
   background: linear-gradient(360deg, rgba(227,227,227,0.2) 46%, rgba(255,255,255,0.26) 100%);
@@ -1656,43 +1647,6 @@
 .theme-dark .keybindShortcutTipsSelect-HDyfe8:last-of-type:before {
   background-color: transparent;
 }
-.theme-dark .outer-2IVh5n {
-  background-color: rgba(0,0,0,0.6);
-}
-.theme-dark .outer-2IVh5n.interactive-1BeKSi:hover {
-  background-color: black;
-}
-.theme-dark .wrapper-9ppXpy {
-  box-shadow:none;
-}
-.theme-dark .colorMuted-HdFt4q {
-  color: silver;
-}
-.theme-dark .multipleIconWrapper-1PjkRO, 
-.theme-dark .section-2VKIPC {
-  background-color: black;
-  border: 2px dashed rgba(255,255,255,.2);
-}
-.theme-dark .popoutContainer-3WC9HR:hover {
-  border: 2px dashed rgba(255,255,255,.2);
-}
-.theme-dark .popout-3G62UL {
-  background-color: rgba(0,0,0,0.8);
-  box-shadow: none;
-}
-.theme-dark .separator-2c4hi3 {
-  background-color: transparent;
-}
-.theme-dark .memberListItem-2ZX2pl:not(.popoutDisabled-xucru2):hover {
-  background-color: black;
-}
-.theme-dark .recentlyPlayedContainer-2F3MqS {
-  background-color: black;
-}
-.channel-2QD9_O, 
-.channel-2QD9_O a {
-  color: silver;
-}
 
 .selected-aXhQR6 .layout-2DM8Md {
   background-color: rgba(0,0,0,0.5);
@@ -1708,51 +1662,6 @@
 .theme-dark .container-cMG81i {
   background-color: transparent;
 }
-.theme-dark .itemBackground-2vEldQ:before {
-  background: radial-gradient(ellipse at top,rgba(54,57,63,0),rgba(0,0,0,0.7)),linear-gradient(90deg,rgba(0,0,0,0.7) 0,rgba(54,57,63,0) 40%,rgba(54,57,63,0) 60%,rgba(0,0,0,0.7)),linear-gradient(0deg,rgba(0,0,0,0.7) 0,rgba(54,57,63,0) 25%);
-}
-
-.theme-dark .overlappingBorder-3aFng4 {
-  border-color: #ca9e73;
-}
-
-.theme-dark .tile-QA_yMc {
-  background-color: rgba(0,0,0,.3);
-  box-shadow: none !important;
-}
-.theme-dark .tile-QA_yMc:hover {
-  background-color: rgba(0,0,0,.6);
-}
-.theme-dark .gradientOverlayRight-3vMuS8 {
-  background-image: none;
-}
-.theme-dark .gradientOverlayLeft-3w159C {
-  background-image: none;
-}
-.theme-dark .scrollerButton-1Vm5_P {
-  background-color: black;
-  color: white;
-}
-.theme-dark .categoryHeader-1D7Tqy, 
-.theme-dark .premiumApplicationsHeader-Zmkm5e {
-  border-color: transparent;
-}
-.theme-dark .tileMedia-1q3guD:hover {
-  background-color: rgba(0,0,0,0.8);
-  box-shadow: none;
-}
-.theme-dark .tileMedia-1q3guD {
-  background-color: transparent;
-  box-shadow: none;
-}
-.theme-dark .genreTag-3QLRUJ {
-  background: #ca9e73;
-  color: white;
-}
-.theme-dark .text-GwUZgS, 
-.theme-dark .title-2BxgL2 {
-  color: white;
-}
 
 .privateChannels-1nO12o header {
   opacity: .7;
@@ -1764,36 +1673,30 @@
   background-color: transparent;
 }
 
-.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumn-eVHFqJ,
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnName-1zBOKm,
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnStatus-ZH4ho2 {
+.theme-dark .title-30qZAO {
   color: white;
 }
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnGuilds-2we6jb .moreMutualGuildsBtn-2VwbkO {
-  border-color: black;
-  color: white;
-}
-.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d {
-  border-bottom: none;
-}
-.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumnSeparator-3MqtMA {
-  background-color: transparent;
-}
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud+.friendsRow-2yicud {
+
+.theme-dark .peopleListItem-2nzedh {
   border-top: none;
 }
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud:hover {
+.theme-dark .peopleListItem-2nzedh:hover {
   background: rgba(213, 158, 104,.3);
   border-color: transparent;
 }
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9 {
+.theme-dark .actionButton-uPB8Fs {
   background-color: #ca9e73;
 }
-.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9:hover {
+.theme-dark .actionButton-uPB8Fs:hover {
   background-color: #d59e68;
 }
-.friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9.friendsActionRemove-qu8nnl:hover {
+.actionButton-uPB8Fs.actionDeny-de_uKj:hover {
   background-color: #E82317!important;
+  color: white !important;
+}
+
+.nowPlayingColumn-2sl4cE {
+  background: transparent;
 }
 
 .theme-dark .subtitle-2P4u9v {
@@ -1818,13 +1721,10 @@
   border-radius: 8px;
   border: 2px solid rgba(0,0,0,0.3);
 }
-.theme-dark .friendsTable-133bsv .friendTableAddWrapper-nHHZtK .friendTableSuggestionsHeader-2zSnpD {
+.theme-dark .sectionHeader-20RGqu {
   border-bottom: none;
 }
-.theme-dark .friendsTable-133bsv .friendTableAddWrapper-nHHZtK .friendTableAddHeader-m9bzFr {
-  background: rgba(0,0,0,0.20);
-  border-bottom: none;
-}
+
 .theme-dark .wrapper-1cBijl {
   border-color: transparent;
   background-color: rgba(0,0,0,0.40);
