--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -732,10 +732,10 @@
 }
 
 .theme-dark .container-3baos1 {
-  background: rgba(0,0,0,.3);
+  background: none;
 }
 .container-1giJp5 {
-  background: rgba(0,0,0,.3);
+  background: none;
   border-bottom: none;
 }
 
@@ -1099,7 +1099,6 @@
 
 .theme-dark .headerCozyMeta-rdohGq {
   color: white;
-  background-color: rgba(0,0,0,.24);
 }
 .username-_4ZSMR {
   font-size: 1.2rem;
