--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -731,10 +731,10 @@
 }
 
 .theme-dark .container-3baos1 {
-  background: rgba(0,0,0,.3);
+  background: none;
 }
 .container-1giJp5 {
-  background: rgba(0,0,0,.3);
+  background:none;
   border-bottom: none;
 }
 
@@ -1097,7 +1097,6 @@
 
 .theme-dark .headerCozyMeta-rdohGq {
   color: white;
-  background-color: rgba(0,0,0,.24);
 }
 .username-_4ZSMR {
   font-size: 1.2rem;
